--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/logo"
+        android:label="Books"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -19,7 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".BooksActivity" />
-        <activity android:name=".BookDetailsActivity"></activity>
+        <activity android:name=".BookDetailsActivity" />
+        <activity android:name=".FavoritesBooksActivity" />
+        <activity android:name=".RecommenderActivity"></activity>
     </application>
 
 </manifest>
